[package]
name = "diaper"
version = "0.2.0-beta"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"

[dev-dependencies]
tempfile = "3"
